--- a/LLM-Powered-Medical-Q&A-System/.env.example
+++ b/LLM-Powered-Medical-Q&A-System/.env.example
@@ -1,11 +1,21 @@
-ENVIRONMENT=dev
-MYSQL_HOST=localhost
-MYSQL_PORT=3306
-MYSQL_USER=root
-MYSQL_PASSWORD=yourpassword
-MYSQL_DATABASE=medical_demo
-REDIS_HOST=localhost
-REDIS_PORT=6379
-REDIS_PASSWORD=
-REDIS_DATABASE=0
-TOKEN_SECRET_KEY=your-secret-key
+# .env.example
+# This is a template file for environment variables required by the project.
+# Copy this file as `.env` and fill in appropriate values before running the system.
+
+# Base directory for the project
+PROJECT_BASE=/home/user/medical-llm-project
+
+# Path to local or remote LLM model checkpoint
+MODEL_PATH=/models/llm/checkpoint.pt
+
+# Optional database configuration
+DB_HOST=localhost
+DB_PORT=5432
+DB_USER=admin
+DB_PASSWORD=your_password
+
+# Example third-party API key (e.g., for search, OCR, or EHR integration)
+API_KEY=your_api_key_here
+
+# Enable debug mode (True or False)
+DEBUG=True
